overflow clearing fix

--- a/source/assets/styles/styles.scss
+++ b/source/assets/styles/styles.scss
@@ -497,6 +497,8 @@ form {
 
 .buttonGroup {
 	margin-bottom:0.5em;
+	display:block;
+	overflow:hidden;
 }
 
 button {
